--- a/gradle.properties
+++ b/gradle.properties
@@ -16,16 +16,16 @@ show_testing_output = false
 # Mod Information
 # HIGHLY RECOMMEND complying with SemVer for mod_version: https://semver.org/
 mod_version = 1.0.0
-root_package = com.example
-mod_id = modid
-mod_name = Mod Name
+root_package = com.emperdog.tinkertantrum
+mod_id = tinkertantrum
+mod_name = Tinker Tantrum
 
 # Mod Metadata (Optional)
-mod_description =
+mod_description = Tinkers' Construct addon designed specifically for MC Eternal 1.
 mod_url =
 mod_update_json =
 # Delimit authors with commas
-mod_authors =
+mod_authors = Emperdog
 mod_credits =
 mod_logo_path =
 
@@ -82,7 +82,7 @@ change_minecraft_sources = false
 # Class name is configurable with the `tag_class_name` property
 # Tag properties can be stated in the `tags.properties` file, references are allowed
 use_tags = true
-tag_class_name = ${root_package}.${mod_id}.Tags
+tag_class_name = ${root_package}.Tags
 
 # Access Transformers
 # A way to change visibility of Minecraft's classes, methods and fields
@@ -103,7 +103,7 @@ mixin_booter_version = 10.2
 # Each config can only have one and only one package root.
 # Generate missing configs, obtain from mixin_configs and generate file base on name convention: "mixins.config_name.json"
 # You should change package root once they are generated
-generate_mixins_json = true
+generate_mixins_json = false
 # Delimit configs with spaces. Should only put configs name instead of full file name
 mixin_configs = ${mod_id}
 # A refmap is a json that denotes mapping conversions, this json is generated automatically, with the name `mixins.mod_id.refmap.json`
