--- a/build.gradle
+++ b/build.gradle
@@ -202,6 +202,8 @@ dependencies {
 
     implementation "curse.maven:rats-323596:3028671"
     implementation rfg.deobf("curse.maven:llibrary-243298:2504999")
+
+    implementation "curse.maven:thaumcraft-223628:2629023"
 }
 
 apply from: 'gradle/scripts/dependencies.gradle'
@@ -233,6 +235,7 @@ processResources {
     inputs.property 'mixin_refmap', propertyString('mixin_refmap')
     inputs.property 'mixin_package', propertyString('mixin_package')
     inputs.property 'mixin_configs', propertyStringList('mixin_configs').join(' ')
+    inputs.property 'min_fml_version', propertyString('min_fml_version')
 
     def filterList = ['mcmod.info', 'pack.mcmeta']
     filterList.addAll(propertyStringList('mixin_configs').collect(config -> "mixins.${config}.json" as String))
@@ -249,7 +252,8 @@ processResources {
                 'mod_update_json': propertyString('mod_update_json'),
                 'mod_logo_path': propertyString('mod_logo_path'),
                 'mixin_refmap': propertyString('mixin_refmap'),
-                'mixin_package': propertyString('mixin_package')
+                'mixin_package': propertyString('mixin_package'),
+                'min_fml_version': propertyString('min_fml_version')
         )
     }
     
