--- a/gradle.properties
+++ b/gradle.properties
@@ -28,6 +28,7 @@ mod_update_json =
 mod_authors = Emperdog
 mod_credits =
 mod_logo_path =
+min_fml_version = 14.5.23.2847
 
 # Mapping Properties
 mapping_channel = stable
@@ -97,7 +98,7 @@ access_transformer_locations = ${mod_id}_at.cfg
 # Powerful tool to do runtime description changes of classes
 # Wiki: https://github.com/SpongePowered/Mixin/wiki + https://github.com/CleanroomMC/MixinBooter/ + https://cleanroommc.com/wiki/forge-mod-development/mixin/preface
 # Only use mixins once you understand the underlying structure
-use_mixins = false
+use_mixins = true
 mixin_booter_version = 10.2
 # A configuration defines a mixin set, and you may have as many mixin sets as you require for your application.
 # Each config can only have one and only one package root.
