TraitCheeseReaper and Modifier/Trait fetching framework
TraitCheeseReaper
- Rats compat trait that makes mobs drop cheese. Does not work currently, but doesn't make the game shit itself either.
- might scrap later, but it was a fun idea in the moment.

TraitEssencePowered
- Mystical Agriculture trait
- makes attacks do more damage when you have MA essence in the offhand and consumes that essence.
- not having essence makes you do less damage.

changed TraitAntimagic and its Armor version slightly.
- Constructor takes an int "level" for the trait instance, so that Head/Core parts can be stronger than Extra/Trim in their effect by using level 2.
- created AncientSpellcraftHelper to contain the code for the onUpdate method for both versions of this trait. more mod helper classes will probably be a regular.

Modifier/Trait fetching Framework
- A bunch of variables that contain all Modifiers currently in the mod (a whopping 2 atm), with versions that filter out modifiers which Should Not be Available in the current environment, due to mod dependencies or whatnot.

--- a/gradle/scripts/dependencies.gradle
+++ b/gradle/scripts/dependencies.gradle
@@ -94,4 +94,7 @@ dependencies {
     implementation rfg.deobf("curse.maven:llibrary-243298:2504999")
 
     implementation "curse.maven:thaumcraft-223628:2629023"
+
+    implementation "curse.maven:cumumber-272335:2645867"
+    implementation "curse.maven:mystical-agriculture-246640:2704562"
 }
