added ModifierElementalWizardry - ConArm x EBWizardry modifier - Reduces the cost of Spells cast while wearing the armor, by using a SpellCastEvent handler similar to base EBW's own for Wizard Armor. - has config option for intensity of the effect, aswell as one for if the "Magic"/"None" version should be obtainable, because it only has a single spell in base EBW.
Some Modifiers are now initialized in a static bound instead of immediate definition, such as ElementalWizardry's instances, as they depend on other mod's classes to be created.

added IBookHideable
- Interface to allow filtering out modifier instances that should not be added to the book from Available Modifiers lists.

added EBWizardryHelper
- currently holds the SpellCastEvent handler for Elemental Wizardry

moved Material RenderInfo to ClientProxy#initRenderInfo()

nerfed TraitAntimagicArmor to 20% per level because you can stack it a lot, since both levels stack.

added Crafttweaker to Runtime, for utility purposes, and maybe integration later.

--- a/gradle/scripts/dependencies.gradle
+++ b/gradle/scripts/dependencies.gradle
@@ -74,6 +74,7 @@ dependencies {
 
     //Environment util
     implementation "mezz.jei:jei_1.12.2:4.16.1.1013"
+    runtimeOnly "CraftTweaker2:CraftTweaker2-MC1120-Main:1.12-4.1.20.703"
 
     //Integrated mods
     implementation "vazkii.botania:Botania:r1.10-364.4"
@@ -91,7 +92,7 @@ dependencies {
     implementation "curse.maven:constructs-armory-287683:3174535"
 
     implementation "curse.maven:rats-323596:3028671"
-    implementation rfg.deobf("curse.maven:llibrary-243298:2504999")
+    implementation "curse.maven:llibrary-243298:2504999"
 
     implementation "curse.maven:thaumcraft-223628:2629023"
 
