make mixins smarter i think mixin loader will now interpret parts of the mixin config name as modids, and only load if all its mods are present.

--- a/gradle.properties
+++ b/gradle.properties
@@ -21,7 +21,7 @@ mod_id = tinkertantrum
 mod_name = Tinker Tantrum
 
 # Mod Metadata (Optional)
-mod_description = Tinkers' Construct addon designed specifically for MC Eternal 1.
+mod_description = A Tinkers' Construct addon designed for the original MC Eternal. Adds integration with numerous mods found in MCE1.
 mod_url =
 mod_update_json =
 # Delimit authors with commas
