--- a/gradle/scripts/dependencies.gradle
+++ b/gradle/scripts/dependencies.gradle
@@ -25,6 +25,36 @@ repositories {
             includeGroup 'maven.modrinth'
         }
     }
+    maven {
+        name = "CoFH Maven"
+        url = "https://maven.covers1624.net"
+    }
+    maven {
+        name = "BlameJared Maven"
+        url = "https://maven.blamejared.com/"
+    }
+    maven {
+        name = "tterrag Maven"
+        url = "https://maven.tterrag.com/"
+    }
+    maven {
+        // location of the maven that hosts JEI files
+        name = "Progwml6 maven"
+        url = "https://dvs1.progwml6.com/files/maven/"
+    }
+    maven {
+        // location of a maven mirror for JEI files, as a fallback
+        name = "ModMaven"
+        url = "https://modmaven.dev"
+    }
+    maven {
+        name = "Thiakil Maven"
+        url = "https://maven.thiakil.com/"
+    }
+    maven {
+        name = "TeamLapen Maven"
+        url = "https://maxanier.de/maven2"
+    }
     mavenLocal() // Must be last for caching to work
 }
 
@@ -98,4 +128,8 @@ dependencies {
 
     implementation "curse.maven:cumumber-272335:2645867"
     implementation "curse.maven:mystical-agriculture-246640:2704562"
+
+    compileOnly "de.teamlapen.vampirism:Vampirism:1.12.2-1.6.2:api"
+    implementation "de.teamlapen.vampirism:Vampirism:1.12.2-1.6.2"
+    runtimeOnly "com.emperdog.bloodbag:bloodbag:1.0.0"
 }
